--- a/Vagrantfile.provision.bash.erb
+++ b/Vagrantfile.provision.bash.erb
@@ -2,7 +2,7 @@
 Vagrant.configure(2) do |config|
   config.vm.box_check_update = false
 
-  vbox template for all vagranth instances
+  # vbox template for all vagranth instances
   config.vm.provider "virtualbox" do |vb|
     vb.gui = false
     vb.memory = "512"
